@@ -34,9 +34,6 @@ when Gant is initiated via the Ant task.
 
 The LaTeX tool does not make use of the return code from (pdf)latex, and it should.
 
-The Maven target set has TestNG version 5.8 hardwired into the code.  This has to be parameterized so as to
-get the latest version from Maven.
-
 Using a target of target gives a very weird error message.
 
 How to add compilerarg tags to the Maven target set?
