@@ -11,7 +11,9 @@ AbstractTool.
 
 Corrected the way that jars are included on the classpath from ~/.gant/lib, ~/.ant/lib and $ANT_HOME/lib.
 
-Updated TestNG from 5.7 to 5.8 in Maven target set.
+Updated TestNG from 5.7 to 5.8 in Maven target set. Amended the properties set so that the TestNG version
+number and and classifier can be set by the user instead of being only hardwired.  The defaults are still
+hardwired in an ugly way though.
 
 1.1.1 ( r9027 )
 ---------------
